# MarkovText

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arguments.cpp  arguments.h  dictionary.h  dictionaryManager.cpp  dictionaryManager.h  fileManager.cpp  fileManager.h  main.cpp  markov.cpp  markov.h
